src/objects/BMCServiceDesk__Normalization_Rule__c.object
<CustomObject>
    <description>Stores details about normalization rules.</description>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Metadata__c</fullName>
        <label>Normalization Metadata</label>
        <referenceTo>BMCServiceDesk__Normalization_Metadata__c</referenceTo>
        <relationshipLabel>Normalization Rules</relationshipLabel>
        <relationshipName>Normalization_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Value__c</fullName>
        <label>Field Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Master_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Rule</label>
        <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
        <relationshipLabel>Master Rules</relationshipLabel>
        <relationshipName>Master_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normalization Rule</fullName>
                    <default>true</default>
                    <label>Normalization Rule</label>
                </value>
                <value>
                    <fullName>Ignored Value Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Normalization Rule</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Field_Value__c</columns>
        <columns>BMCServiceDesk__Inactive__c</columns>
        <columns>BMCServiceDesk__Master_Rule__c</columns>
        <columns>BMCServiceDesk__FKNormalization_Metadata__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Rule -{00000}</displayFormat>
        <label>Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Normalization Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>